Update to practice

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,10 @@
     "import requests\n",
     "import json\n",
     "# Import the API key.\n",
-    "from config import weather_api_key"
+    "from config import weather_api_key\n",
+    "# Import the time library and the datetime module from the datetime library \n",
+    "import time\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -107,6 +110,310 @@
     "\n",
     "response_city = requests.get(city_url).json()\n",
     "print(json.dumps(response_city, indent=4, sort_keys=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a 'Get' request for the city weather.\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":501,\"main\":\"Rain\",\"description\":\"moderate rain\",\"icon\":\"10d\"},{\"id\":701,\"main\":\"Mist\",\"description\":\"mist\",\"icon\":\"50d\"}],\"base\":\"stations\",\"main\":{\"temp\":280.84,\"feels_like\":277.59,\"temp_min\":279.58,\"temp_max\":281.88,\"pressure\":1015,\"humidity\":89},\"visibility\":8047,\"wind\":{\"speed\":5.66,\"deg\":50},\"rain\":{\"1h\":1.54},\"clouds\":{\"all\":100},\"dt\":1649252091,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1649240280,\"sunset\":1649286892},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the text of the 'Get' request.\n",
+    "city_weather.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 501,\n",
+       "   'main': 'Rain',\n",
+       "   'description': 'moderate rain',\n",
+       "   'icon': '10d'},\n",
+       "  {'id': 701, 'main': 'Mist', 'description': 'mist', 'icon': '50d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 280.84,\n",
+       "  'feels_like': 277.59,\n",
+       "  'temp_min': 279.58,\n",
+       "  'temp_max': 281.88,\n",
+       "  'pressure': 1015,\n",
+       "  'humidity': 89},\n",
+       " 'visibility': 8047,\n",
+       " 'wind': {'speed': 5.66, 'deg': 50},\n",
+       " 'rain': {'1h': 1.54},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1649252091,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1649240280,\n",
+       "  'sunset': 1649286892},\n",
+       " 'timezone': -14400,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the JSON text of the 'Get' request.\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City Weather found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City weather not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Bston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 501,\n",
+       "   'main': 'Rain',\n",
+       "   'description': 'moderate rain',\n",
+       "   'icon': '10d'},\n",
+       "  {'id': 701, 'main': 'Mist', 'description': 'mist', 'icon': '50d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 280.84,\n",
+       "  'feels_like': 277.59,\n",
+       "  'temp_min': 279.58,\n",
+       "  'temp_max': 281.88,\n",
+       "  'pressure': 1015,\n",
+       "  'humidity': 89},\n",
+       " 'visibility': 8047,\n",
+       " 'wind': {'speed': 5.66, 'deg': 50},\n",
+       " 'rain': {'1h': 1.54},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1649252091,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1649240280,\n",
+       "  'sunset': 1649286892},\n",
+       " 'timezone': -14400,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 501,\n",
+       "   'main': 'Rain',\n",
+       "   'description': 'moderate rain',\n",
+       "   'icon': '10d'},\n",
+       "  {'id': 701, 'main': 'Mist', 'description': 'mist', 'icon': '50d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 280.84,\n",
+       "  'feels_like': 277.59,\n",
+       "  'temp_min': 279.58,\n",
+       "  'temp_max': 281.88,\n",
+       "  'pressure': 1015,\n",
+       "  'humidity': 89},\n",
+       " 'visibility': 8047,\n",
+       " 'wind': {'speed': 5.66, 'deg': 50},\n",
+       " 'rain': {'1h': 1.54},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1649252091,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1649240280,\n",
+       "  'sunset': 1649286892},\n",
+       " 'timezone': -14400,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the JSON data.\n",
+    "boston_data = city_weather.json()\n",
+    "boston_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.3584 -71.0598 281.88 89 100 5.66\n"
+     ]
+    }
+   ],
+   "source": [
+    "lat = boston_data[\"coord\"][\"lat\"]\n",
+    "lng = boston_data[\"coord\"][\"lon\"]\n",
+    "max_temp = boston_data[\"main\"][\"temp_max\"]\n",
+    "humidity = boston_data[\"main\"][\"humidity\"]\n",
+    "clouds = boston_data[\"clouds\"][\"all\"]\n",
+    "wind = boston_data[\"wind\"][\"speed\"]\n",
+    "print(lat, lng, max_temp, humidity, clouds, wind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2022, 4, 6, 13, 34, 51)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the datetime module from the datetime library.\n",
+    "from datetime import datetime\n",
+    "# Get the date from the JSON file.\n",
+    "date = boston_data[\"dt\"]\n",
+    "# Convert the UTC date to a date format with year, month, day, hours, minutes, and seconds.\n",
+    "datetime.utcfromtimestamp(date)"
    ]
   }
  ],
