--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -4187,13 +4187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "baa9a4618a09418797e746720d7da004",
+       "model_id": "636d8702e841474c8ca0d6b142845af7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4206,6 +4206,7 @@
     }
    ],
    "source": [
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
     "# Heatmap of temperature\n",
     "# Get the latitude and longitude.\n",
     "locations = city_data_df[[\"Lat\", \"Lng\"]]\n",
@@ -4228,6 +4229,52 @@
    "outputs": [],
    "source": [
     "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the maximum temperature.\n",
+    "max_temp = city_data_df[\"Max Temp\"]\n",
+    "temps = []\n",
+    "for temp in max_temp:\n",
+    "    temps.append(max(temp, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6cd9df70c720400090536c52514469b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "# Heatmap of percent humidity\n",
+    "locations = city_data_df[[\"Lat\", \"Lng\"]]\n",
+    "humidity = city_data_df[\"Humidity\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity, dissipating=False, max_intensity=300, point_radius=4)\n",
+    "\n",
+    "fig.add_layer(heat_layer)\n",
+    "# Call the figure to plot the data.\n",
+    "fig"
    ]
   }
  ],
