--- a/Weather_Database/Vacation_Search.ipynb
+++ b/Weather_Database/Vacation_Search.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "      <td>AR</td>\n",
        "      <td>-54.8000</td>\n",
        "      <td>-68.3000</td>\n",
-       "      <td>277.96</td>\n",
+       "      <td>40.658</td>\n",
        "      <td>93</td>\n",
        "      <td>100</td>\n",
        "      <td>6.17</td>\n",
@@ -84,7 +84,7 @@
        "      <td>PF</td>\n",
        "      <td>-9.8000</td>\n",
        "      <td>-139.0333</td>\n",
-       "      <td>299.18</td>\n",
+       "      <td>78.854</td>\n",
        "      <td>78</td>\n",
        "      <td>26</td>\n",
        "      <td>7.61</td>\n",
@@ -97,7 +97,7 @@
        "      <td>CA</td>\n",
        "      <td>46.7001</td>\n",
        "      <td>-75.4493</td>\n",
-       "      <td>278.31</td>\n",
+       "      <td>41.288</td>\n",
        "      <td>59</td>\n",
        "      <td>49</td>\n",
        "      <td>1.97</td>\n",
@@ -110,7 +110,7 @@
        "      <td>KI</td>\n",
        "      <td>3.0707</td>\n",
        "      <td>172.7902</td>\n",
-       "      <td>299.61</td>\n",
+       "      <td>79.628</td>\n",
        "      <td>80</td>\n",
        "      <td>76</td>\n",
        "      <td>2.59</td>\n",
@@ -123,7 +123,7 @@
        "      <td>US</td>\n",
        "      <td>42.0970</td>\n",
        "      <td>-79.2353</td>\n",
-       "      <td>282.01</td>\n",
+       "      <td>47.948</td>\n",
        "      <td>41</td>\n",
        "      <td>100</td>\n",
        "      <td>1.34</td>\n",
@@ -135,11 +135,11 @@
       ],
       "text/plain": [
        "   City_ID         City Country      Lat       Lng  Max Temp  Humidity  \\\n",
-       "0        0      Ushuaia      AR -54.8000  -68.3000    277.96        93   \n",
-       "1        1       Atuona      PF  -9.8000 -139.0333    299.18        78   \n",
-       "2        2  Ferme-Neuve      CA  46.7001  -75.4493    278.31        59   \n",
-       "3        3   Butaritari      KI   3.0707  172.7902    299.61        80   \n",
-       "4        4    Jamestown      US  42.0970  -79.2353    282.01        41   \n",
+       "0        0      Ushuaia      AR -54.8000  -68.3000    40.658        93   \n",
+       "1        1       Atuona      PF  -9.8000 -139.0333    78.854        78   \n",
+       "2        2  Ferme-Neuve      CA  46.7001  -75.4493    41.288        59   \n",
+       "3        3   Butaritari      KI   3.0707  172.7902    79.628        80   \n",
+       "4        4    Jamestown      US  42.0970  -79.2353    47.948        41   \n",
        "\n",
        "   Cloudiness  Wind Speed      Current Description  \n",
        "0         100        6.17  light intensity drizzle  \n",
@@ -149,7 +149,7 @@
        "4         100        1.34          overcast clouds  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,45 +162,334 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Prompt the user to enter minimum and maximum temperature criteria \n"
+    "# 2. Prompt the user to enter minimum and maximum temperature criteria \n",
+    "# Ask the customer to add a minimum and maximum temperature value.\n",
+    "min_temp = float(input(\"What is the minimum temperature you would like for your trip? \"))\n",
+    "max_temp = float(input(\"What is the maximum temperature you would like for your trip? \"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Current Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Atuona</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>-9.8000</td>\n",
+       "      <td>-139.0333</td>\n",
+       "      <td>78.854</td>\n",
+       "      <td>78</td>\n",
+       "      <td>26</td>\n",
+       "      <td>7.61</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Butaritari</td>\n",
+       "      <td>KI</td>\n",
+       "      <td>3.0707</td>\n",
+       "      <td>172.7902</td>\n",
+       "      <td>79.628</td>\n",
+       "      <td>80</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Puerto Ayora</td>\n",
+       "      <td>EC</td>\n",
+       "      <td>-0.7393</td>\n",
+       "      <td>-90.3518</td>\n",
+       "      <td>80.564</td>\n",
+       "      <td>91</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1.34</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Lakota</td>\n",
+       "      <td>CI</td>\n",
+       "      <td>5.8528</td>\n",
+       "      <td>-5.6883</td>\n",
+       "      <td>87.944</td>\n",
+       "      <td>57</td>\n",
+       "      <td>87</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Mount Isa</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>-20.7333</td>\n",
+       "      <td>139.5000</td>\n",
+       "      <td>83.966</td>\n",
+       "      <td>26</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2.57</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>660</th>\n",
+       "      <td>660</td>\n",
+       "      <td>Mount Darwin</td>\n",
+       "      <td>ZW</td>\n",
+       "      <td>-16.7725</td>\n",
+       "      <td>31.5838</td>\n",
+       "      <td>77.090</td>\n",
+       "      <td>56</td>\n",
+       "      <td>64</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>662</th>\n",
+       "      <td>662</td>\n",
+       "      <td>Alyangula</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>-13.8483</td>\n",
+       "      <td>136.4192</td>\n",
+       "      <td>78.674</td>\n",
+       "      <td>94</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>666</th>\n",
+       "      <td>666</td>\n",
+       "      <td>Nisia Floresta</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>-6.0911</td>\n",
+       "      <td>-35.2086</td>\n",
+       "      <td>88.178</td>\n",
+       "      <td>52</td>\n",
+       "      <td>89</td>\n",
+       "      <td>4.30</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>667</th>\n",
+       "      <td>667</td>\n",
+       "      <td>Muncar</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>-8.4333</td>\n",
+       "      <td>114.3333</td>\n",
+       "      <td>75.866</td>\n",
+       "      <td>83</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>672</th>\n",
+       "      <td>672</td>\n",
+       "      <td>Kaohsiung</td>\n",
+       "      <td>TW</td>\n",
+       "      <td>22.6163</td>\n",
+       "      <td>120.3133</td>\n",
+       "      <td>79.034</td>\n",
+       "      <td>70</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2.06</td>\n",
+       "      <td>few clouds</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>211 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     City_ID            City Country      Lat       Lng  Max Temp  Humidity  \\\n",
+       "1          1          Atuona      PF  -9.8000 -139.0333    78.854        78   \n",
+       "3          3      Butaritari      KI   3.0707  172.7902    79.628        80   \n",
+       "6          6    Puerto Ayora      EC  -0.7393  -90.3518    80.564        91   \n",
+       "11        11          Lakota      CI   5.8528   -5.6883    87.944        57   \n",
+       "13        13       Mount Isa      AU -20.7333  139.5000    83.966        26   \n",
+       "..       ...             ...     ...      ...       ...       ...       ...   \n",
+       "660      660    Mount Darwin      ZW -16.7725   31.5838    77.090        56   \n",
+       "662      662       Alyangula      AU -13.8483  136.4192    78.674        94   \n",
+       "666      666  Nisia Floresta      BR  -6.0911  -35.2086    88.178        52   \n",
+       "667      667          Muncar      ID  -8.4333  114.3333    75.866        83   \n",
+       "672      672       Kaohsiung      TW  22.6163  120.3133    79.034        70   \n",
+       "\n",
+       "     Cloudiness  Wind Speed Current Description  \n",
+       "1            26        7.61    scattered clouds  \n",
+       "3            76        2.59          light rain  \n",
+       "6           100        1.34     overcast clouds  \n",
+       "11           87        1.95     overcast clouds  \n",
+       "13           12        2.57          light rain  \n",
+       "..          ...         ...                 ...  \n",
+       "660          64        1.35       broken clouds  \n",
+       "662          40        0.00    scattered clouds  \n",
+       "666          89        4.30          light rain  \n",
+       "667          79        0.36       broken clouds  \n",
+       "672          20        2.06          few clouds  \n",
+       "\n",
+       "[211 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 3. Filter the city_data_df DataFrame using the input statements to create a new DataFrame using the loc method.\n"
+    "# 3. Filter the city_data_df DataFrame using the input statements to create a new DataFrame using the loc method.\n",
+    "preferred_cities_df = city_data_df.loc[(city_data_df[\"Max Temp\"] <= max_temp) & \\\n",
+    "                                       (city_data_df[\"Max Temp\"] >= min_temp)]\n",
+    "preferred_cities_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City_ID                False\n",
+       "City                   False\n",
+       "Country                False\n",
+       "Lat                    False\n",
+       "Lng                    False\n",
+       "Max Temp               False\n",
+       "Humidity               False\n",
+       "Cloudiness             False\n",
+       "Wind Speed             False\n",
+       "Current Description    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 4a. Determine if there are any empty rows.\n"
+    "# 4a. Determine if there are any empty rows.\n",
+    "preferred_cities_df.count().isnull()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City_ID                False\n",
+       "City                   False\n",
+       "Country                False\n",
+       "Lat                    False\n",
+       "Lng                    False\n",
+       "Max Temp               False\n",
+       "Humidity               False\n",
+       "Cloudiness             False\n",
+       "Wind Speed             False\n",
+       "Current Description    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 4b. Drop any empty rows and create a new DataFrame that doesn’t have empty rows.\n"
+    "# 4a. Determine if there are any empty rows.\n",
+    "preferred_cities_df.count().isna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# 4b. Drop any empty rows and create a new DataFrame that doesn’t have empty rows.\n",
+    "clean_df = preferred_cities_df.dropna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21164/3876679154.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 5a. Create DataFrame called hotel_df to store hotel names along with city, country, max temp, and coordinates.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mhotel_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclean_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"City\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Country\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Max Temp\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Current Description\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Lat\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Lng\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# 5b. Create a new column \"Hotel Name\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mhotel_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Hotel Name\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'method' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "# 5a. Create DataFrame called hotel_df to store hotel names along with city, country, max temp, and coordinates.\n",
     "hotel_df = clean_df[[\"City\", \"Country\", \"Max Temp\", \"Current Description\", \"Lat\", \"Lng\"]].copy()\n",
